trunk/test/fail/InterfaceTests.tart
/// TEST InterfaceDataMember: Data member not allowed in interface
interface Test {
  var x:int;
}
